css/styles.css
/* ... */
/*******************/
/* Main Navigation */
/*******************/

.main-header {
    position: fixed;
    background: transparent;
    z-index: 100;
}

.main-header.highlight {
    background: var(--black);
}

.main-header nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.main-header nav .logo {
    width: 150px;
}

.main-header nav .main-menu-links {
    display: flex;
    gap: 1.5rem;
}

.main-header nav a {
    text-transform: capitalize;
    color: white;
    font-weight: 700;
    font-size: 1.2rem;
}

.main-header nav i {
    font-size: 2rem;
    color: white;
}

.main-header nav .mobile-menu-toggle {
    display: none;
}

/************/
/* Sections */
/************/

.title {
    font-size: 2.5rem;
    text-transform: capitalize;
    display: inline-block;
    margin-top: 32px;
    position: relative;
}

.intro {
    font-size: 1.5rem;
    font-weight: 350;
    margin-top: 32px;
}

section:has(header) {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 64px;
}

section header {
    text-align: center;
    max-width: 95ch;
}

/* Hero */

.hero {
    background: url("../images/header-background.jpg");
    background-size: cover;
    background-position: right center;
    background-repeat: no-repeat;
}

.hero .hero-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    gap: 16px;
}

.hero .hero-content {
    display: flex;
    flex-direction: column;
    gap: 32px;
    color: white;
}

.hero .hero-content h1 {
    font-size: 3.3rem;
    line-height: 1.2;
}

.hero .hero-content p {
    font-size: 1.5rem;
}

.hero .hero-content a {
    font-size: 1.2rem;
    font-weight: 600;
}

.hero .hero-image {
    flex: none;
    flex-basis: 60%;
}

.hero svg.wave {
    display: block;
    height: 50px;
    width: 100%;
}

/* Course Topics */

.course-topics {
    container: course-topics / inline-size;
}

.course-topics .topics {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 48px 32px;
}

.course-topics .topic .topic-image {
    transform: scale(1);
    transition: transform 0.5s ease;
}

.course-topics .topic .topic-title {
    text-transform: capitalize;
    font-weight: bold;
    padding-top: 10px;
    font-size: 16px;
}

/* Course Chapters */

.course-chapters {
    container: course-chapters / inline-size;
}

.course-chapters .chapters {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 32px;
    margin-bottom: 64px;
}

.course-chapters .chapters .chapter {
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    text-align: center;
    gap: 16px;
    padding: 32px 24px;
    animation: slide-left both;
    animation-timeline: view();
    animation-range: entry 50%;
}

.course-chapters .chapter .chapter-title {
    text-transform: capitalize;
}

.course-chapters .chapter .chapter-icon {
    max-width: 50%;
}

/* Course Summary */

.course-summary {
    background: var(--grey);
    display: block;
    container: course-summary / inline-size;
}

.course-summary header {
    max-width: 100%;
}

.course-summary .container {
    margin: 32px auto calc(32px + calc(2.5rem * 1.6)) ;
}

.course-summary .accordion {
    background: white;
    counter-reset: chapter;
    padding: 32px 24px;
}

.course-summary .accordion input {
    display: none;
}

.course-summary .accordion input:checked + label {
    border: none;
}

.course-summary .accordion input:checked + label::after {
    content: "−";
    font-size: 2rem;
    position: absolute;
    right: 10px;
    top: 5px;
}

.course-summary .accordion input:checked ~ .accordion-content {
    display: block;
}


.course-summary .accordion label {
    counter-increment: chapter;
    text-transform: capitalize;
    color: white;
    background: var(--primary);
    display: block;
    font-size: 1.1rem;
    font-weight: bold;
    padding: 16px;
    margin: 16px auto;
    position: relative;
}

.course-summary .accordion label::before {
    content: counter(chapter) ". ";
}

.course-summary .accordion label::after {
    content: "+";
    font-size: 2rem;
    position: absolute;
    right: 10px;
    top: 5px;
}

.course-summary .accordion .accordion-content {
    display: none;
}

.course-summary .accordion-content ol {
    counter-reset: section;
}

.course-summary .accordion-content li {
    counter-increment: section;
    border-bottom: 1px solid rgba(0, 0, 0, .1);
    padding: 20px;
}

.course-summary .accordion-content li:last-of-type {
    border-bottom: none;
}

.course-summary .accordion-content li::before {
    content: counter(chapter) "." counter(section) " ";
}

/* Course Audience */

.course-audience {
    background-image: url("../images/audience.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 70vh;
    position: relative;
    container: course-audience / inline-size;
}

.course-audience .wrapper {
    position: absolute;
    max-width: 100vw;
    height: 70vh;
    left: 49%;
    background-color: var(--primary);
    color: white;
    display: flex;
    padding: 48px;
    flex-direction: column;
    justify-content: center;
    gap: 24px;
}

.course-audience .wrapper h2 {
    text-transform: capitalize;
    font-size: 2rem;
}

.course-audience .wrapper p {
    font-size: 1.4rem;
}

.course-audience .wrapper ul {
    font-size: 1.5rem;
    font-weight: bold;
    text-transform: capitalize;
}

.course-audience .wrapper li::before {
    content: "✓  ";
    color: var(--secondary);
    font-size: 1.5rem;
}


/**************/
/* Animations */
/**************/

@keyframes slide-left {
    0% {
        transform: translateX(100vw);
    }

    50% {
        transform: translateX(50vw);
    }

    100 % {
        transform: translateX(0);
    }
}
/* ... */

